# memory-mcp

./: .gitignore  COMPREHENSIVE_REVIEW.md  LICENSE  README.md  RERANKER_RESEARCH.md  SERVICE.md  install-service.sh  memory-viewer.service  memory_viewer.py  migrate_project_ids.py  models.py  pyproject.toml  server.py  test_server.py  uninstall-service.sh  utils.py
.factory/hooks/: memory-extractor.py  session_start_recall.py
hooks/: memory-extractor.py
