[project]
name = "memory-mcp"
version = "3.2.0"
description = "MCP server with LanceDB hybrid search (vector + BM25) and neural reranking"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0,<2.0.0",
    "lancedb>=0.15.0,<0.20.0",
    "mcp>=1.0.0,<2.0.0",
    "numpy>=1.24.0,<3.0.0",
    "pyarrow>=14.0.0,<20.0.0",
    "requests>=2.31.0,<3.0.0",
    "sentence-transformers>=2.2.0,<4.0.0",
    "tantivy>=0.20.1,<1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]
optional = [
    "flask>=3.1.2",
]
optional-deps = [
    "flask>=3.0.0,<4.0.0",
]

[project.scripts]
memory-viewer = "memory_viewer:main"

# =============================================================================
# Ruff Configuration (Linter + Formatter)
# =============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "C4",     # flake8-comprehensions
    "PTH",    # flake8-use-pathlib
    "RUF",    # ruff-specific
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # assert in tests is fine
    "S603",   # subprocess call - we need it for git
    "S607",   # partial executable path - git is in PATH
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["S101", "PLR2004"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

# =============================================================================
# pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
